# boids-cpp

./: .clang-format  .clang-tidy  .gitattributes  .gitignore  .pre-commit-config.yaml  CMakeLists.txt  README.md
.github/workflows/: clang-format.yml  clang-tidy.yml  cmake-multi-platform.yml  codeql.yml
src/: boid.cpp  boid.hpp  main.cpp  simulation.cpp  simulation.hpp  utils.cpp  utils.hpp
